# ml-serving-api

./: .dockerignore  .gitignore  Dockerfile.api  Dockerfile.streamlit  docker-compose.yml  pyproject.toml  readme.md
model/: model.pkl
src/: Model.py  main.py  streamlit_app.py
src/routers/: prediction_router.py
src/tests/: test_data_serialization.py
src/utils/: data_serialization.py
