[tool.poetry]
name = "ml-serving-api"
version = "0.1.0"
description = ""
authors = ["Jithin Areepuzha <jithin.areepuzha@autotrader.co.uk>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.8"
uvicorn = "^0.34.0"
python-multipart = "^0.0.20"
cloudpickle = "^3.1.1"
pydantic = "^2.10.6"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
